ver 0.24.3 (not yet released)

ver 0.24.2 (2025/03/26)
* input
  - io_uring: fix stuck seek after I/O error
* decoder
  - flac: enable chained Ogg decoding
* player
  - fix stalled playback after queue modification
  - fix deadlock with "single" mode
* Linux: fix build failure with ancient kernel headers

ver 0.24.1 (2025/03/21)
* input
  - curl: fix malformed "Range" header
* output
  - sndio: fix rounding error in volume calculation
* log: include year in time stamp
* Linux
  - add configure-time check for openat2()
  - fix use-after-free bug on io_uring shutdown
* macOS
  - implement standard directories
  - fix command-line parser errors
* fix build failure in the "id3tag" Meson subproject
* doc: use "sphinx_rtd_theme" only if it is installed

ver 0.24 (2025/03/11)
* protocol
  - new command "searchcount" (case-insensitive "count")
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
  - allow range in "playlistmove"
  - "save" can append to or replace an existing playlist
  - filter "prio" (for "playlistfind"/"playlistsearch")
  - limit "player" idle events to the current partition
  - operator "starts_with"
  - show PCRE support in "config" response
  - apply Unicode normalization to case-insensitive filter expressions
  - stickers on playlists and some tag types
  - new commands "stickernames", "stickertypes", "stickernamestypes", "playlistlength", "searchplaylist", "protocol"
  - new "search"/"find" filter "added-since"
  - allow range in listplaylist and listplaylistinfo
  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt", "gt", "contains" and "starts_with"
  - consume only idle flags that were subscribed to
  - volume command is no longer deprecated
  - new "available" and "reset" subcommands for tagtypes
  - searching stored playlists respond now with song position
  - new sticker subcommand "inc" and "dec"
* database
  - attribute "added" shows when each song was added to the database